[tool.poetry]
name = "dl-utils"
version = "0.1.0"
description = ""
authors = ["ImadDabbura <imad.dabbura@hotmail.com>"]
readme = "README.md"
packages = [{include = "dl_utils"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
