[tool.poetry]
name = "dl-utils"
version = "0.1.0"
description = ""
authors = ["ImadDabbura <imad.dabbura@hotmail.com>"]
readme = "README.md"
packages = [{include = "dl_utils"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^22.12.0"
pytest = "^7.2.1"
flake8 = "^6.0.0"
pre-commit = "^3.0.2"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
